--- a/calificaciones.html
+++ b/calificaciones.html
@@ -69,6 +69,16 @@
       font-weight:600;
     }
 
+    .salir {
+      background:#c0392b;
+      color:#fff;
+      padding:8px 12px;
+      border-radius:8px;
+      border:none;
+      cursor:pointer;
+      font-weight:600;
+    }
+
     .editar {
       background:#ffc107;
       color:#000;
@@ -105,7 +115,6 @@
 
     label { font-weight:700; margin-right:8px; }
 
-    /* 👇 Mueve el botón "Nueva Materia" al otro extremo (derecha) */
     .btn-nueva-materia {
       margin-left: auto;
     }
@@ -142,10 +151,14 @@
     <label>Docente:</label>
     <input id="docente" placeholder="Nombre del docente" />
 
-    <!-- Botones: Agregar, Guardar (izquierda), Nueva Materia (extremo derecho) -->
     <button id="btnAgregar" class="agregar">Agregar Alumno</button>
     <button id="btnGuardar" class="guardar">Guardar</button>
+
     <button id="btnNuevoMateria" class="agregar btn-nueva-materia">Nueva Materia</button>
+
+    <!-- ✅ BOTÓN SALIR AGREGADO -->
+    <button id="btnSalir" class="salir">Salir</button>
+
   </div>
 
   <table id="tablaCalificaciones">
@@ -179,12 +192,14 @@
   const app = initializeApp(firebaseConfig);
   const db = getDatabase(app);
 
+  // Materias por grupo
   const materiasPorGrupo = {
     "1°": ["Matemáticas 1","Español 1","Biología 1","Geografía 1","Danza 1","Educación Física 1","Historia I","Ética I","Inglés 1","Gastronomía 1","Habilidades Digitales 1"],
     "2°": ["Matemáticas 2","Español 2","Danza 2","Ética II","Física 2","Inglés 2","Educación Física 2","Historia II","Gastronomía 2","Habilidades Digitales 2"],
     "3°": ["Matemáticas 3","Español 3","Inglés 3","Danza 3","Ética III","Vida Saludable 3","Historia III","Educación Física 3","Gastronomía 3","Habilidades Digitales 3","Química 3"]
   };
 
+  // Alumnos por grupo (orden alfabético)
   const alumnosPorGrupo = {
     "1°": ["Cesar","Isabella","Samuel","Santiago","Victoria"].sort(),
     "2°": ["Alisson","Julieta","Mario","Mateo"].sort(),
@@ -201,6 +216,11 @@
     document.getElementById("btnAgregar").addEventListener("click", agregarFila);
     document.getElementById("btnGuardar").addEventListener("click", guardar);
     document.getElementById("btnNuevoMateria").addEventListener("click", nuevaMateria);
+
+    // ✅ EVENTO DEL BOTÓN SALIR
+    document.getElementById("btnSalir").addEventListener("click", () => {
+      window.location.href = "index.html";
+    });
   });
 
   async function cargarTrimestre() {
@@ -262,16 +282,15 @@
     });
   }
 
-  // 👉 FUNCIÓN PARA "NUEVA MATERIA"
+  // FUNCIÓN NUEVA MATERIA
   function nuevaMateria() {
-    if (!confirm("¿Deseas iniciar captura para una nueva materia? Se limpiará la tabla actual.")) return;
+    if (!confirm("¿Deseas iniciar captura para una nueva materia?")) return;
     cuerpoTabla.innerHTML = "";
     promedioGrupo.textContent = "-";
     document.getElementById("materia").selectedIndex = 0;
     mensajeExito.style.display = "none";
   }
 
-  // Validación y edición de filas
   window.validarCalificacion = function(td){
     let v=td.textContent.trim();
     if (!/^\d+$/.test(v)) { td.textContent=""; return; }
